# ninja_runner

./: .gitignore  CMakeLists.txt  README.md
include/components/: AnimationComponent.h  CollisionComponent.h  HealthComponent.h  PhysicsComponent.h  PlayerComponent.h  SpriteComponent.h  TransformComponent.h
include/core/: AssetManager.h  AudioManager.h  Constants.h  FontRenderer.h  Game.h  GameState.h  InputManager.h  KeyBindings.h
include/ecs/: Entity.h
include/entities/: ObstacleFactory.h  PlayerFactory.h
include/levels/: Level.h  LevelManager.h  RooftopDayLevel.h  RooftopNightLevel.h
include/systems/: AnimationSystem.h  CollisionSystem.h  ParallaxSystem.h  ParticleSystem.h  PhysicsSystem.h  PlayerControlSystem.h  RenderSystem.h
include/ui/: GameOverScreen.h  HUD.h  Menu.h
src/: main.cpp
src/core/: AssetManager.cpp  AudioManager.cpp  FontRenderer.cpp  Game.cpp  InputManager.cpp  KeyBindings.cpp
src/entities/: ObstacleFactory.cpp  PlayerFactory.cpp
src/levels/: Level.cpp  LevelManager.cpp  RooftopDayLevel.cpp  RooftopNightLevel.cpp
src/systems/: AnimationSystem.cpp  CollisionSystem.cpp  ParallaxSystem.cpp  ParticleSystem.cpp  PhysicsSystem.cpp  PlayerControlSystem.cpp  RenderSystem.cpp
src/ui/: GameOverScreen.cpp  HUD.cpp  Menu.cpp
